--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "@types/redux": "^3.6.0",
     "@types/redux-thunk": "^2.1.0",
     "cypress": "^13.6.3",
-    "eslint-plugin-cypress": "^2.15.1"
+    "eslint-plugin-cypress": "^2.15.1",
+    "redux-mock-store": "^1.5.4"
   }
 }
